--- a/javascript/effect/sliderEffect01.html
+++ b/javascript/effect/sliderEffect01.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko">
-​
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>슬라이드 이펙트01</title>
-    ​
-    <link rel="stylesheet" href="../assets/css/slider.css">
-    <link rel="stylesheet" href="/javascript/assets/css/dracula.css">
-</head>
-​
 
-<body class="img01">
+    <link rel="stylesheet" href="../assets/css/slider.css">
+    <link rel="stylesheet" href="../assets/css/dracula.css">
+
+    <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
+</head>
+
+<body class="img07">
     <header id="header">
         <h1>Javascript Slider Effect01</h1>
         <p>슬라이드 이펙트 - 트랜지션 효과</p>
@@ -28,12 +28,12 @@
         </ul>
     </header>
     <!-- //header -->
-    ​
+
     <main id="main">
-        ​
+
     </main>
     <!-- //main -->
-    ​
+
     <footer id="footer">
         <div class="modal__wrap">
             <div class="modal__btn">소스 보기</div>
@@ -44,20 +44,20 @@
                         <div class="tabs">
                             <div class="active">
                                 <span class="favicon" aria-label="true">
-                                    <svg width="16" height="16" viewBox="0 0 18 18" fill="#f18413" aria-hidden="true"
+                                    <svg width="16" height="16" viewBox="0 0 18 18" fill="none" aria-hidden="true"
                                         focusable="false">
-                                        <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                        <circle cx="9" cy="9" r="9" fill="#fff"></circle>
                                         <path
                                             d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z"
-                                            fill="var(--orange-0)"></path>
+                                            fill="orange"></path>
                                         <path
                                             d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z"
-                                            fill="var(--yellow-0)"></path>
+                                            fill="yellow"></path>
                                     </svg>
                                 </span>
-                                <em>JAVSCRIPT</em>
+                                <em>Javascript</em>
                                 <span class="close">
-                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="yellow" aria-hidden="true"
+                                    <svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true"
                                         focusable="false">
                                         <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round"></path>
@@ -68,20 +68,20 @@
                             </div>
                             <div>
                                 <span class="favicon" aria-label="true">
-                                    <svg width="16" height="16" viewBox="0 0 18 18" fill="#f18413" aria-hidden="true"
+                                    <svg width="16" height="16" viewBox="0 0 18 18" fill="none" aria-hidden="true"
                                         focusable="false">
-                                        <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                        <circle cx="9" cy="9" r="9" fill="#fff"></circle>
                                         <path
                                             d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z"
-                                            fill="var(--orange-0)"></path>
+                                            fill="orange"></path>
                                         <path
                                             d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z"
-                                            fill="var(--yellow-0)"></path>
+                                            fill="yellow"></path>
                                     </svg>
                                 </span>
                                 <em>HTML</em>
                                 <span class="close">
-                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="yellow" aria-hidden="true"
+                                    <svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true"
                                         focusable="false">
                                         <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round"></path>
@@ -92,20 +92,20 @@
                             </div>
                             <div>
                                 <span class="favicon" aria-label="true">
-                                    <svg width="16" height="16" viewBox="0 0 18 18" fill="#f18413" aria-hidden="true"
+                                    <svg width="16" height="16" viewBox="0 0 18 18" fill="none" aria-hidden="true"
                                         focusable="false">
-                                        <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                        <circle cx="9" cy="9" r="9" fill="#fff"></circle>
                                         <path
                                             d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z"
-                                            fill="var(--orange-0)"></path>
+                                            fill="orange"></path>
                                         <path
                                             d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z"
-                                            fill="var(--yellow-0)"></path>
+                                            fill="yellow"></path>
                                     </svg>
                                 </span>
                                 <em>CSS</em>
                                 <span class="close">
-                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="yellow" aria-hidden="true"
+                                    <svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true"
                                         focusable="false">
                                         <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5"
                                             stroke-linecap="round" stroke-linejoin="round"></path>
@@ -127,108 +127,170 @@
                     </div>
                     <div class="cont">
                         <div class="active">
-                            <pre><code class="language-js">//탭 메뉴
-const tabBtn = document.querySelectorAll(".modal__box .tabs > div");
-const tabCont = document.querySelectorAll(".modal__box .cont > div");
-​
-tabBtn.forEach((element, index) => {
-    element.addEventListener("click", (event) => {
-        event.preventDefault();
-​
-        tabBtn.forEach(li => {
-            li.classList.remove("active");
-        });
-​
-        element.classList.add("active");
-​
-        tabCont.forEach(div => {
-            div.style.display = "none";
-        });
-​
-        tabCont[index].style.display = "block";
-    });
-});
+                            <pre><code class="language-js">function updateQuiz(){
+    quizType.textContent = quizInfo[0].answerType;
+    quizNumber.textContent = quizInfo[0].answerNum + ". ";
+    quizAsk.textContent = quizInfo[0].answerAsk;
+    quizResult.textContent = quizInfo[0].answerEx;
+
+    for( let i=0; i&lt;4; i++ ){   //보기 출력
+        quizChoice[i].textContent = quizInfo[0].answerChoice[i];
+    }
+
+    //해설 숨기기
+    quizResult.style.display = "none";
+}
+updateQuiz();
 </code></pre>
                         </div>
                         <div>
-                            <pre><code class="language-html">&lt;span&gt;charAt()를 이용하여 검색하기&lt;/span&gt;
-&lt;h1&gt;CSS 속성 첫글자 검색하기&lt;/h1&gt;
-&lt;div class="search__info"&gt;
-    &lt;div class="keyword"&gt;
-        &lt;span&gt;a&lt;/span&gt;
-        &lt;span&gt;b&lt;/span&gt;
-        &lt;span&gt;c&lt;/span&gt;
-        &lt;span&gt;d&lt;/span&gt;
-        &lt;span&gt;e&lt;/span&gt;
-        &lt;span&gt;f&lt;/span&gt;
-        &lt;span&gt;g&lt;/span&gt;
-        &lt;span&gt;h&lt;/span&gt;
-        &lt;span&gt;i&lt;/span&gt;
-        &lt;span&gt;j&lt;/span&gt;
-        &lt;span&gt;k&lt;/span&gt;
-        &lt;span&gt;l&lt;/span&gt;
-        &lt;span&gt;m&lt;/span&gt;
-        &lt;span&gt;n&lt;/span&gt;
-        &lt;span&gt;o&lt;/span&gt;
-        &lt;span&gt;p&lt;/span&gt;
-        &lt;span&gt;q&lt;/span&gt;
-        &lt;span&gt;r&lt;/span&gt;
-        &lt;span&gt;s&lt;/span&gt;
-        &lt;span&gt;t&lt;/span&gt;
-        &lt;span&gt;u&lt;/span&gt;
-        &lt;span&gt;v&lt;/span&gt;
-        &lt;span&gt;w&lt;/span&gt;
-        &lt;span&gt;x&lt;/span&gt;
-        &lt;span&gt;y&lt;/span&gt;
-        &lt;span&gt;z&lt;/span&gt;
-    &lt;/div&gt;
-    &lt;div&gt;전체 속성 갯수&lt;span class="num"&gt;0&lt;/span&gt;&lt;/div&gt;
+                            <pre><code class="language-html">&lt;div class="tabs"&gt;
+	&lt;div class="active"&gt;
+		&lt;span class="favicon" aria-label="true"&gt;
+			&lt;svg width="16" height="16" viewBox="0 0 18 18" fill="none" aria-hidden="true" focusable="false"&gt;
+				&lt;circle cx="9" cy="9" r="9" fill="#fff"&gt;&lt;/circle&gt;
+				&lt;path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"&gt;&lt;/path&gt;
+				&lt;path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="yellow"&gt;&lt;/path&gt;
+			&lt;/svg&gt;
+		&lt;/span&gt;
+		&lt;em&gt;Javascript&lt;/em&gt;
+		&lt;span class="close"&gt;
+			&lt;svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false"&gt;
+				&lt;path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"&gt;&lt;/path&gt;
+				&lt;path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"&gt;&lt;/path&gt;
+			&lt;/svg&gt;
+		&lt;/span&gt;
+	&lt;/div&gt;
+	&lt;div&gt;
+		&lt;span class="favicon" aria-label="true"&gt;
+			&lt;svg width="16" height="16" viewBox="0 0 18 18" fill="none" aria-hidden="true" focusable="false"&gt;
+				&lt;circle cx="9" cy="9" r="9" fill="#fff"&gt;&lt;/circle&gt;
+				&lt;path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"&gt;&lt;/path&gt;
+				&lt;path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="yellow"&gt;&lt;/path&gt;
+			&lt;/svg&gt;
+		&lt;/span&gt;
+		&lt;em&gt;HTML&lt;/em&gt;
+		&lt;span class="close"&gt;
+			&lt;svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false"&gt;
+				&lt;path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"&gt;&lt;/path&gt;
+				&lt;path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"&gt;&lt;/path&gt;
+			&lt;/svg&gt;
+		&lt;/span&gt;
+	&lt;/div&gt;
+	&lt;div&gt;
+		&lt;span class="favicon" aria-label="true"&gt;
+			&lt;svg width="16" height="16" viewBox="0 0 18 18" fill="none" aria-hidden="true" focusable="false"&gt;
+				&lt;circle cx="9" cy="9" r="9" fill="#fff"&gt;&lt;/circle&gt;
+				&lt;path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"&gt;&lt;/path&gt;
+				&lt;path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="yellow"&gt;&lt;/path&gt;
+			&lt;/svg&gt;
+		&lt;/span&gt;
+		&lt;em&gt;CSS&lt;/em&gt;
+		&lt;span class="close"&gt;
+			&lt;svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false"&gt;
+				&lt;path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"&gt;&lt;/path&gt;
+				&lt;path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"&gt;&lt;/path&gt;
+			&lt;/svg&gt;
+		&lt;/span&gt;
+	&lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
                         </div>
                         <div>
-                            <pre><code class="language-css">.modal__box .title .tabs>div {
-    color: hsl(39, 33%, 66%);
-    background-color: hsl(0, 0%, 20%);
-    padding: 0.35rem 0.8rem 0rem 0.8rem;
+                            <pre><code class="language-css">.modal__box {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    height: 600px;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    background-color: #fff;
+    box-shadow: 0 10px 20px -5px hsl(180deg 2% 10%);
+}
+.modal__box .title {
+    padding-inline: 1rem;
+    background-color: #1b1c2e;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    height: 50px;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+.modal__box .title .dot {
+    width: 15px;
+    height: 15px;
+    background-color: #3b3d63;
+    display: inline-block;
+    border-radius: 50%; 
+    position: relative;
+    margin-left: 2rem;
+}
+.modal__box .title .dot::before {
+    content: '';
+    position: absolute;
+    left: 25px;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    background-color: #3b3d63;
+    border-radius: 50%; 
+}
+.modal__box .title .dot::after {
+    content: '';
+    position: absolute;
+    right: 25px;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    background-color: #3b3d63;
+    border-radius: 50%; 
+}
+.modal__box .title .plus {
+    background: #282936;
+    padding: 0.5rem 0.5rem 0.3rem 0.5rem;
+    border-radius: 0.5rem;
+    color: #7a7d9d;
+}
+.modal__box .title .tabs {
+    display: flex;
+    margin-left: 50px;
+}
+.modal__box .title .tabs > div {
+    color: #7a7d9d;
+    background-color: #282936;
+    padding: 0.35rem 0.8rem 0.25rem 0.8rem;
     margin-right: 0.5rem;
     display: flex;
     align-items: center;
     border-radius: 0.4rem;
     text-transform: uppercase;
+    cursor: pointer;
 }
-​
-.modal__box .title .tabs>div.active {
-    background-color: #c9685f;
+.modal__box .title .tabs > div.active {
+    background-color: #1f224a;
 }
-​
-.modal__box .title .tabs>div em {
-    font-style: normal
+.modal__box .title .tabs > div em {
+    font-style: normal;
 }
-​
-.modal__box .title .tabs>div .favicon {
+.modal__box .title .tabs > div .favicon {
     margin-right: 0.4rem;
-    margin-top: 0.3rem;
+    margin-top: 0.2rem;
 }
-​
-.modal__box .title .tabs>div .close {
-    margin-left: 5rem;
+.modal__box .title .tabs > div .close {
+    margin-left: 4rem;
 }
-​
 .modal__box .cont {
     background-color: #282936;
     height: 550px;
     box-sizing: border-box;
     border-bottom-left-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
-    overflow-y: auto;
 }
-​
-.modal__box .cont>div {
+.modal__box .cont > div {
     display: none;
 }
-​
-.modal__box .cont>div.active {
+.modal__box .cont > div.active {
     display: block;
 }
 </code></pre>
@@ -236,7 +298,7 @@ tabBtn.forEach((element, index) => {
                     </div>
                 </div>
                 <div class="modal__close">
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="yellow" aria-hidden="true" focusable="false">
+                    <svg width="18" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
                         <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
                             stroke-linejoin="round"></path>
                         <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -247,22 +309,26 @@ tabBtn.forEach((element, index) => {
         </div>
     </footer>
     <!-- //footer -->
-    ​
-    <script src="/javascript/assets/js/highlight.min.js"></script>
+
+
+    <script src="../assets/js/highlight.min.js"></script>
     <script>
         hljs.highlightAll();
-    </script>
-    ​
-    <script>
-        //모달
+
+        // 모달
         const modalBtn = document.querySelector(".modal__btn");
+        const modalClose = document.querySelector(".modal__close");
         const modalCont = document.querySelector(".modal__cont");
 
         modalBtn.addEventListener("click", () => {
             modalCont.classList.add("show");
         });
+        modalClose.addEventListener("click", () => {
+            modalCont.classList.remove("show");
+        });
 
-        //탭 메뉴
+
+        // 탭 메뉴
         const tabBtn = document.querySelectorAll(".modal__box .tabs > div");
         const tabCont = document.querySelectorAll(".modal__box .cont > div");
 
@@ -272,8 +338,7 @@ tabBtn.forEach((element, index) => {
 
                 tabBtn.forEach(li => {
                     li.classList.remove("active");
-                });
-
+                })
                 element.classList.add("active");
 
                 tabCont.forEach(div => {
@@ -285,6 +350,5 @@ tabBtn.forEach((element, index) => {
         });
     </script>
 </body>
-​
 
 </html>
