--- a/javascript/effect/sliderEffect01.html
+++ b/javascript/effect/sliderEffect01.html
@@ -87,11 +87,11 @@
         <section id="sliderType01">
             <div class="slider__wrap">
                 <div class="slider__img">
-                    <div class="slider"><img src="../assets/img/effect_bg01-min.jpg" alt=""></div>
-                    <div class="slider"><img src="../assets/img/effect_bg02-min.jpg" alt=""></div>
-                    <div class="slider"><img src="../assets/img/effect_bg03-min.jpg" alt=""></div>
-                    <div class="slider"><img src="../assets/img/effect_bg04-min.jpg" alt=""></div>
-                    <div class="slider"><img src="../assets/img/effect_bg05-min.jpg" alt=""></div>
+                    <div class="slider"><img src="../assets/img/effect_bg01-min.jpg" alt="">이미지01</div>
+                    <div class="slider"><img src="../assets/img/effect_bg02-min.jpg" alt="">이미지02</div>
+                    <div class="slider"><img src="../assets/img/effect_bg03-min.jpg" alt="">이미지03</div>
+                    <div class="slider"><img src="../assets/img/effect_bg04-min.jpg" alt="">이미지04</div>
+                    <div class="slider"><img src="../assets/img/effect_bg05-min.jpg" alt="">이미지05</div>
                 </div>
             </div>
         </section>
@@ -430,15 +430,6 @@ updateQuiz();
 
             currentIndex = nextIndex;
         }, 3000);
-
-
-
-
-
-
-
-        //첫번째이미지 안보이게
-        //두번째 이미지 보이게
     </script>
 </body>
 
