--- a/html/laytag.html
+++ b/html/laytag.html
@@ -136,49 +136,129 @@
         /* 구조태그 이용 */
         #wrap {
             font-size: 18px;
+            width: 1200px;
+
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-weight: normal;
+            color: #fff;
+        }
+
+        h2 {
+            text-align: center;
+
         }
 
         #header1 {
-            width: 1200px;
-            height: 120px;
+            width: 100%;
+            height: 100px;
             background-color: rgb(95, 207, 119);
+            padding: 45px 20px 30px 20px;
             display: flex;
+            box-sizing: border-box;
+
 
         }
 
-        #header1 h1 {
+        #header1 h1 a {
             text-decoration: none;
-            list-style: none;
+            color: #fff;
+            padding-right: 100px;
         }
 
 
+        #nav {}
 
-        #header1 li {
+        #nav ul li {
+
             list-style: none;
             display: inline;
-
-
+            padding: 30px 30px 30px 30px;
 
         }
 
         #header1 li a {
             text-decoration: none;
-            color: #ddd;
-            border: 1px solid #000;
+            color: #fff;
+            border: 1px solid #fff;
             padding: 0.3vw 1vw;
             display: inline-block;
+
         }
 
         #container {
-            width: 1200px;
+            display: flex;
             height: 480px;
             background-color: rgb(95, 207, 119);
         }
 
+        .container1 {
+            display: flex;
+            width: 80%;
+
+        }
+
+        .container1 .section1 {
+            border: 1px solid #fff;
+            width: 50%;
+            height: 480px;
+            padding-top: 20px;
+            box-sizing: border-box;
+
+
+        }
+
+        .container1 .section2 {
+            border: 1px solid #fff;
+            width: 50%;
+            height: 480px;
+            padding-top: 20px;
+            box-sizing: border-box;
+
+        }
+
+        .container2 {
+            width: 20%;
+            height: 480px;
+
+        }
+
+        .container2 .artticle1 {
+            border: 1px solid #fff;
+            width: 100%;
+            height: 240px;
+            padding-top: 20px;
+            box-sizing: border-box;
+
+        }
+
+        .container2 .aside {
+            border: 1px solid #fff;
+            height: 240px;
+            text-align: center;
+            color: #fff;
+            padding-top: 20px;
+            box-sizing: border-box;
+
+
+        }
+
         #footer {
-            width: 1200px;
+            width: 100%;
             height: 120px;
             background-color: rgb(95, 207, 119);
+            text-align: center;
+            color: #fff;
+            line-height: 2;
+            padding-top: 20px;
+            box-sizing: border-box;
+
         }
     </style>
 </head>
@@ -260,7 +340,7 @@
         <div id="wrap">
             <header id="header1">
                 <h1><a href="#">반응형웹</a></h1>
-                <nav>
+                <nav id="nav">
                     <ul>
                         <li><a href="#">menu01</a></li>
                         <li><a href="#">menu02</a></li>
@@ -271,19 +351,25 @@
                 </nav>
             </header>
             <div id="container">
-                <section class="section">
-                    <h2>콘텐츠그룹01</h2>
-                </section>
-                <section class="section">
-                    <h2>콘텐츠그룹02</h2>
-                </section>
-                <article class="artticle1">
-                    <h2>주요기사</h2>
-                </article>
-                <aside class="aside">
-                    광고
-                </aside>
+                <div class="container1">
+                    <section class="section1">
+                        <h2>콘텐츠그룹01</h2>
+                    </section>
+                    <section class="section2">
+                        <h2>콘텐츠그룹02</h2>
+                    </section>
+                </div>
+                <div class="container2">
+                    <article class="artticle1">
+                        <h2>주요기사</h2>
+                    </article>
+                    <aside class="aside">
+                        광고
+                    </aside>
+                </div>
+
             </div>
+
             <footer id="footer">
                 <address>
                     palepinkday@gmail.com
