--- a/site/imgType/imgType03.html
+++ b/site/imgType/imgType03.html
@@ -5,15 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이미지유형03</title>
+    <title>이미지 유형03</title>
+    <link href="https://webfontworld.github.io/yangheeryu/GowunBatang.css" rel="stylesheet">
     <style>
+        /* fonts */
+        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
+
+        .gmarcket {
+            font-family: 'GmarketSans';
+        }
+
+
         /* reset */
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
         img {
             width: 100%;
             vertical-align: top;
         }
 
-        /* ir 효과(이미지 대체 효과) */
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-weight: normal;
+        }
+
         .ir {
             display: block;
             overflow: hidden;
@@ -23,6 +50,13 @@
         }
 
         /* common */
+        .container {
+            width: 1160px;
+            padding: 0 20px;
+            margin: 0 auto;
+            min-width: 1160px;
+        }
+
         .container-fluid {
             width: 100%;
             padding: 0 100px;
@@ -34,19 +68,32 @@
         }
 
         .section>h2 {
+
             font-size: 50px;
-            line-height: 1;
+            font-weight: 300;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: normal;
+            letter-spacing: normal;
             text-align: center;
-            margin-bottom: 20px;
+            color: #736969;
+            padding-bottom: 20px;
+
         }
 
         .section>p {
+
             font-size: 22px;
             font-weight: 300;
-            color: #666;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: normal;
+            letter-spacing: normal;
             text-align: center;
-            margin-bottom: 70px;
+            color: #736969;
+            padding-bottom: 70px;
         }
+
 
         /* imageType */
         .image__inner {
@@ -64,11 +111,9 @@
             overflow: hidden;
         }
 
-        .image__inner .image {}
-
         .image__inner .image:nth-child(1) {
             grid-area: box1;
-            background: url(img/img_bg03_01.jpg) no-repeat;
+            background: url(img/image_bg03_01.jpg);
             background-size: cover;
         }
 
@@ -88,14 +133,12 @@
             grid-area: box5;
         }
 
-        .image__box {}
-
         .image__desc {
             position: absolute;
             left: 0;
             bottom: -100%;
             width: 100%;
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(6px);
             background: rgba(255, 255, 255, 0.3);
             padding: 16px;
             box-sizing: border-box;
@@ -108,11 +151,12 @@
 
         .image__desc h3 {
             font-size: 20px;
+            color: rgb(82, 77, 77);
         }
 
         .image__desc p {
             font-size: 16px;
-            color: #666;
+            color: rgb(82, 77, 77);
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
@@ -120,19 +164,20 @@
 
         .image__sns {
             position: absolute;
-            right: -100px;
+            right: 10px;
             top: 10px;
+            opacity: 0;
             transition: all 0.4s ease;
         }
 
         .image__sns a {
             width: 36px;
             height: 36px;
-            background: #fff;
+            background: #bbb;
             border-radius: 50%;
             display: block;
             margin-bottom: 5px;
-            background: url(img/image_bg03_icon.svg);
+            background: url(img/image_bg03_icon.svg) no-repeat;
         }
 
         .image__sns a:nth-child(2) {
@@ -152,17 +197,21 @@
         }
 
         .image:hover .image__sns {
-            right: 10px;
+            /* right: 10px; */
+            opacity: 1;
+        }
+
+        .image__desc .desc2 {
+            color: rgb(194, 205, 215);
         }
     </style>
 </head>
 
 <body>
-    <section id="imageType03" class="image__wrap gowun section">
-        <h2>세상에서 가장 아름다운 건물</h2>
+    <section id="imageType03" class="image__wrap gmarket section">
+        <h2>월페이퍼 공유 공간</h2>
         <p>
-            웹쓰가 선정한 죽기전에 가봐야 할 건축물 베스트5입니다.<br>
-            전세계에서 가장 유명한 건축가가 제작한 건축물로써 한번은 꼭 가봐야 하는 곳입니다.
+            디자이너들의 월페이퍼 공유 공간에서 추천하는 월페이퍼 베스트 5입니다.
         </p>
         <div class="image__inner container-fluid">
             <article class="image">
@@ -170,12 +219,16 @@
                     <img src="img/image_bg03_01.jpg" alt="셰이크 로트폴라 모스크">
                 </figure> -->
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>월페이퍼 공유 공간</h3>
+                    <p>디자이너들의 월페이퍼 공유 공간입니다.</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span>페이스북</span></a>
-                    <a href="#" class="link"><span>페이지이동</span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
+
                 </div>
             </article>
             <article class="image">
@@ -183,12 +236,12 @@
                     <img src="img/image_bg03_02.jpg" alt="셰이크 로트폴라 모스크">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3 class="desc2">월페이퍼 공유 공간</h3>
+                    <p class="desc2">디자이너들의 월페이퍼 공유 공간입니다.</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span>페이스북</span></a>
-                    <a href="#" class="link"><span>페이지이동</span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
                 </div>
             </article>
             <article class="image">
@@ -196,12 +249,12 @@
                     <img src="img/image_bg03_03.jpg" alt="셰이크 로트폴라 모스크">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>월페이퍼 공유 공간</h3>
+                    <p>디자이너들의 월페이퍼 공유 공간입니다.</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span>페이스북</span></a>
-                    <a href="#" class="link"><span>페이지이동</span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
                 </div>
             </article>
             <article class="image">
@@ -209,12 +262,12 @@
                     <img src="img/image_bg03_04.jpg" alt="셰이크 로트폴라 모스크">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>월페이퍼 공유 공간</h3>
+                    <p>디자이너들의 월페이퍼 공유 공간입니다.</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span>페이스북</span></a>
-                    <a href="#" class="link"><span>페이지이동</span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
                 </div>
             </article>
             <article class="image">
@@ -222,12 +275,12 @@
                     <img src="img/image_bg03_05.jpg" alt="셰이크 로트폴라 모스크">
                 </figure>
                 <div class="image__desc">
-                    <h3>셰이크 로트폴라 모스크</h3>
-                    <p>세계에서 가장 유명한 건물입니다. 최고의 건출물이나 현재는 전쟁으로 인해서 많이 파괴되었지만. 아직도 살 수 있다고 말한...</p>
+                    <h3>월페이퍼 공유 공간</h3>
+                    <p>디자이너들의 월페이퍼 공유 공간입니다.</p>
                 </div>
                 <div class="image__sns">
-                    <a href="#" class="link"><span>페이스북</span></a>
-                    <a href="#" class="link"><span>페이지이동</span></a>
+                    <a href="#" class="link"><span></span></a>
+                    <a href="#" class="link"><span></span></a>
                 </div>
             </article>
         </div>
