--- a/html/laytag.html
+++ b/html/laytag.html
@@ -136,7 +136,7 @@
         /* 구조태그 이용 */
         #wrap {
             font-size: 18px;
-            width: 1200px;
+            width: 100%;
 
         }
 
@@ -152,7 +152,6 @@
 
         h2 {
             text-align: center;
-
         }
 
         #header1 {
@@ -176,7 +175,7 @@
         #nav {}
 
         #nav ul li {
-
+            width: 100%;
             list-style: none;
             display: inline;
             padding: 30px 30px 30px 30px;
