--- a/html/laytag.html
+++ b/html/laytag.html
@@ -136,7 +136,7 @@
         /* 구조태그 이용 */
         #wrap {
             font-size: 18px;
-            width: 100%;
+            width: 1200px;
 
         }
 
