--- a/html/laytag.html
+++ b/html/laytag.html
@@ -137,6 +137,8 @@
         #wrap {
             font-size: 18px;
             width: 1200px;
+            margin: 0;
+            padding: 0;
 
         }
 
