--- a/coding2-main/site/imgType/imgType02.html
+++ b/coding2-main/site/imgType/imgType02.html
@@ -40,9 +40,7 @@
             width: 1160px;
             padding: 120px 20px 120px 20px;
             margin: 0 auto;
-
-
-
+            /* 중앙정렬 */
         }
 
         .section>h2 {
