--- a/javascript/effect/detaEffect.html
+++ b/javascript/effect/detaEffect.html
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+    <main>
+        <div class="intro_menu white">
+
+        </div>
+    </main>
     <canvas id="webgal_canvas"></canvas>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
