--- a/javascript/effect/quizEffect.html
+++ b/javascript/effect/quizEffect.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>퀴즈이펙트</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
     <style>
         body {
             padding: 0;
