--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -1080,7 +1080,31 @@ info3.result3();
             info3.result3();
         }
 
-        //20. 클래스 : 함수 집합체 
+        //20. 즉시 실행 함수
+
+        (() => {
+            document.write("함수가 실행되었습니다");
+
+        })();
+
+        //21. 파라미터 함수
+        function func(str) {
+            document.write(str);
+        } func("함수가 실핼되었습니다"); {
+            document.write(str);
+        }
+
+        //22. 아규먼트 함수
+        function func(a, b) {
+            document.writ(arguments[0]);
+            document.writ(arguments[1]);
+
+        }
+        func("함수가 실행되었습니다", "함수가 실행되었습니다");
+
+
+
+
 
 
         //01. 선언적 함수
