--- a/javascript/effect/sliderEffect01.html
+++ b/javascript/effect/sliderEffect01.html
@@ -40,9 +40,30 @@
             position: absolute;
             left: 5px;
             top: 5px;
-            background: rgb(0004);
+            background: rgb(0, 0, 0, 0.4);
             counter-reset: #fff;
+            padding: 5px 10px;
 
+        }
+
+        .slider:nth-child(1)::before {
+            content: '이미지1'
+        }
+
+        .slider:nth-child(2)::before {
+            content: '이미지2'
+        }
+
+        .slider:nth-child(3)::before {
+            content: '이미지3'
+        }
+
+        .slider:nth-child(4)::before {
+            content: '이미지4'
+        }
+
+        .slider:nth-child(5)::before {
+            content: '이미지5'
         }
 
         .slider:nth-child(1) {
