--- a/coding2-main/javascript/effect/quizEffect.html
+++ b/coding2-main/javascript/effect/quizEffect.html
@@ -11,7 +11,7 @@
         body {
             padding: 0;
             width: 100px;
-            height: 100vm;
+            height: 100vh;
             background: #11E8BB;
             background: linear-gradient(to bottom, #11E8BB 0%, #8200C9 100%);
             overflow: hidden;
