--- a/coding2-main/javascript/javascript01.html
+++ b/coding2-main/javascript/javascript01.html
@@ -31,9 +31,9 @@
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈효과</a></li>
-                <li><a href="effect/detaEffect01.html">데이터 효과</a></li>
+                <li><a href="effect/searchEffect.html">검색효과</a></li>
+                <li><a href="effect/quizEffect.html">퀴즈효과</a></li>
+                <li><a href="effect/detaEffect.html">데이터 효과</a></li>
                 <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
                 <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
                 <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
