--- a/coding2-main/javascript/javascript09.html
+++ b/coding2-main/javascript/javascript09.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/dracula.css">
 </head>
+
 <body>
     <header id="header">
         <h1><a href="index.html">Javascript</a></h1>
@@ -29,9 +31,9 @@
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈효과</a></li>
-                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
+                <li><a href="effect/searchEffect.html">검색효과</a></li>
+                <li><a href="effect/quizEffect.html">퀴즈효과</a></li>
+                <li><a href="effect/detaEffect.html">데이터 효과</a></li>
                 <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
                 <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
                 <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
@@ -77,4 +79,5 @@
     </footer>
     <!-- //footer -->
 </body>
+
 </html>
