--- a/coding2-main/javascript/effect/detaEffect.html
+++ b/coding2-main/javascript/effect/detaEffect.html
@@ -13,7 +13,7 @@
             width: 100%;
             height: 100vh;
             overflow: hidden;
-            background: radial-gradient(circle farthest-corner at center center, #275ee8, #b725d4);
+            background: radial-gradient(circle farthest-corner at center center, #6c04ff, #4bbab9);
         }
 
         .intro_menu ul li {
